--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,22 @@
 {
     "appService.preDeployTask": "publish-release",
     "appService.deploySubpath": "bin\\Release\\net6.0\\publish",
-    "appService.defaultWebAppToDeploy": "/subscriptions/35e158f6-c62f-4777-9f06-76590a652f0e/microsoft.web/sites/subscriptions/35e158f6-c62f-4777-9f06-76590a652f0e/resourceGroups/DefaultResourceGroup-null/providers/Microsoft.Web/sites/redemptionercs"
+    "appService.defaultWebAppToDeploy": "/subscriptions/35e158f6-c62f-4777-9f06-76590a652f0e/microsoft.web/sites/subscriptions/35e158f6-c62f-4777-9f06-76590a652f0e/resourceGroups/DefaultResourceGroup-null/providers/Microsoft.Web/sites/redemptionercs",
+    "sqltools.connections": [
+        {
+            "mssqlOptions": {
+                "appName": "SQLTools",
+                "useUTC": true,
+                "encrypt": true
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 1433,
+            "driver": "MSSQL",
+            "database": "redemptionerdatabase",
+            "username": "vinay",
+            "password": " ",
+            "name": "redemptionerdatams"
+        }
+    ]
 }
